# VulkanEngine

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  compile.bat  generate.bat  run.bat
Source/: first_app.cpp  first_app.h  keyboard_movement_controller.cpp  keyboard_movement_controller.h  main.cpp  my_engine_device.cpp  simple_render_system.cpp  simple_render_system.h  ve_buffer.cpp  ve_buffer.h  ve_camera.cpp  ve_camera.h  ve_components.cpp  ve_components.h  ve_descriptors.cpp  ve_descriptors.h  ve_device.cpp  ve_device.h  ve_ecs.h  ve_frame_info.h  ve_game_object.cpp  ve_game_object.h  ve_model.cpp  ve_model.h  ve_object_manager.cpp  ve_object_manager.h  ve_pipeline.cpp  ve_pipeline.h  ve_renderer.cpp  ve_renderer.h  ve_swap_chain.cpp  ve_swap_chain.h  ve_texture.cpp  ve_texture.h  ve_utils.h  ve_window.cpp  ve_window.h
Source/systems/: gravity_physics_system.cpp  gravity_physics_system.h  point_light_system.cpp  point_light_system.h  simple_render_system.cpp  simple_render_system.h  textured_render_system.cpp  textured_render_system.h  vec_2_field_system.cpp  vec_2_field_system.h
shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert  textured_shader.frag  textured_shader.vert
